tests/rustdoc-ui/infinite-recursive-type-impl-trait-return.stderr
error[E0072]: recursive type `DEF_ID` has infinite size
  --> $DIR/infinite-recursive-type-impl-trait-return.rs:7:5
   |
LL |     enum E {
   |     ^^^^^^
LL |         This(E),
   |              - recursive without indirection
   |
help: insert some indirection (e.g., a `DEF_ID`) to break the cycle
   |
LL |         This(Box<E>),
   |              ++++ +

error: aborting due to previous error

For more information about this error, try `DEF_ID`.
